objects almost done NO PERDER ESTA VERSION

--- a/misPruebras.Rmd
+++ b/misPruebras.Rmd
@@ -25,7 +25,7 @@ fca$attributes
 ```{r}
 set_objects <- Set$new(fca$objects)
 set_objects$assign(Zelda = 1)
-#set_objects$assign(Megaman = 1)
+set_objects$assign(Megaman = 1)
 fca$intent(set_objects)
 print(set_objects)
 ```
